--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
-- description: Chapolinada horária
-- url: /
-- schedule: every 1 hours
+- description: hourly chapolination
+  url: /
+  schedule: every 1 hours
